# qahirah_notebooks

./: Pin Point with Qahirah.ipynb  pyproject.toml
