[tool.poetry]
name = "qahirah_notebooks"
version = "0.1.0"
description = "Fork of Qahirah Notebooks from https://github.com/ldo/qahirah_notebooks"
authors = ["Stiff Neck Jim <22213990+stiffneckjim@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Qahirah = "^1.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
